// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworksFilterSelector renders correctly when networkFilter is a subset of uniqueNetworks 1`] = `
[
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Select all
    </Text>
  </TouchableOpacity>,
  <RCTScrollView
    collapsable={false}
    data={
      [
        "eip155:1",
        "eip155:59144",
        "eip155:56",
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "height": 533.6,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#4459ff",
                        "borderColor": "#4459ff",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  >
                    <SvgMock
                      color="#ffffff"
                      fill="currentColor"
                      height={20}
                      name="CheckBold"
                      onPress={[Function]}
                      style={
                        {
                          "height": 20,
                          "width": 20,
                        }
                      }
                      testID="checkbox-icon-component"
                      width={20}
                    />
                  </View>
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Ethereum
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#4459ff",
                        "borderColor": "#4459ff",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  >
                    <SvgMock
                      color="#ffffff"
                      fill="currentColor"
                      height={20}
                      name="CheckBold"
                      onPress={[Function]}
                      style={
                        {
                          "height": 20,
                          "width": 20,
                        }
                      }
                      testID="checkbox-icon-component"
                      width={20}
                    />
                  </View>
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Linea
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#b7bbc8",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  BNB Smart Chain
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
    </View>
  </RCTScrollView>,
  <View
    style={
      {
        "marginTop": 12,
        "paddingHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#121314",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#ffffff",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Apply
      </Text>
    </TouchableOpacity>
  </View>,
]
`;

exports[`NetworksFilterSelector renders correctly when networkFilter is null 1`] = `
[
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Select all
    </Text>
  </TouchableOpacity>,
  <RCTScrollView
    collapsable={false}
    data={
      [
        "eip155:1",
        "eip155:59144",
        "eip155:56",
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "height": 533.6,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#b7bbc8",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Ethereum
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#b7bbc8",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Linea
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#b7bbc8",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  />
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  BNB Smart Chain
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
    </View>
  </RCTScrollView>,
  <View
    style={
      {
        "marginTop": 12,
        "paddingHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#121314",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#ffffff",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Apply
      </Text>
    </TouchableOpacity>
  </View>,
]
`;

exports[`NetworksFilterSelector renders correctly when networkFilter is the same as uniqueNetworks 1`] = `
[
  <TouchableOpacity
    accessibilityRole="button"
    accessible={true}
    activeOpacity={1}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      {
        "alignItems": "center",
        "alignSelf": "flex-start",
        "backgroundColor": "transparent",
        "borderRadius": 12,
        "flexDirection": "row",
        "height": 32,
        "justifyContent": "center",
        "overflow": "hidden",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#4459ff",
          "fontFamily": "Geist-Medium",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        }
      }
    >
      Deselect all
    </Text>
  </TouchableOpacity>,
  <RCTScrollView
    collapsable={false}
    data={
      [
        "eip155:1",
        "eip155:59144",
        "eip155:56",
      ]
    }
    getItem={[Function]}
    getItemCount={[Function]}
    handlerTag={-1}
    handlerType="NativeViewGestureHandler"
    keyExtractor={[Function]}
    onContentSizeChange={[Function]}
    onGestureHandlerEvent={[Function]}
    onGestureHandlerStateChange={[Function]}
    onLayout={[Function]}
    onMomentumScrollBegin={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    renderScrollComponent={[Function]}
    scrollEventThrottle={0.0001}
    stickyHeaderIndices={[]}
    style={
      {
        "height": 533.6,
      }
    }
    viewabilityConfigCallbackPairs={[]}
  >
    <View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#4459ff",
                        "borderColor": "#4459ff",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  >
                    <SvgMock
                      color="#ffffff"
                      fill="currentColor"
                      height={20}
                      name="CheckBold"
                      onPress={[Function]}
                      style={
                        {
                          "height": 20,
                          "width": 20,
                        }
                      }
                      testID="checkbox-icon-component"
                      width={20}
                    />
                  </View>
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Ethereum
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#4459ff",
                        "borderColor": "#4459ff",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  >
                    <SvgMock
                      color="#ffffff"
                      fill="currentColor"
                      height={20}
                      name="CheckBold"
                      onPress={[Function]}
                      style={
                        {
                          "height": 20,
                          "width": 20,
                        }
                      }
                      testID="checkbox-icon-component"
                      width={20}
                    />
                  </View>
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Linea
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
      <View
        onFocusCapture={[Function]}
        onLayout={[Function]}
        style={null}
      >
        <TouchableOpacity
          disabled={false}
          onPress={[Function]}
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 4,
              "opacity": 1,
              "position": "relative",
            }
          }
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "padding": 16,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <TouchableOpacity
                  disabled={false}
                  onPress={[Function]}
                  style={
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "height": 24,
                      "opacity": 1,
                    }
                  }
                >
                  <View
                    accessibilityRole="checkbox"
                    style={
                      {
                        "alignItems": "center",
                        "backgroundColor": "#4459ff",
                        "borderColor": "#4459ff",
                        "borderRadius": 4,
                        "borderWidth": 2,
                        "height": 20,
                        "justifyContent": "center",
                        "width": 20,
                      }
                    }
                  >
                    <SvgMock
                      color="#ffffff"
                      fill="currentColor"
                      height={20}
                      name="CheckBold"
                      onPress={[Function]}
                      style={
                        {
                          "height": 20,
                          "width": 20,
                        }
                      }
                      testID="checkbox-icon-component"
                      width={20}
                    />
                  </View>
                </TouchableOpacity>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": -1,
                  }
                }
                testID="listitemcolumn"
              >
                <View
                  style={
                    {
                      "alignItems": "center",
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "justifyContent": "center",
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                >
                  <Image
                    onError={[Function]}
                    resizeMode="contain"
                    source={1}
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                    testID="network-avatar-image"
                  />
                </View>
              </View>
              <View
                accessible={false}
                style={
                  {
                    "width": 16,
                  }
                }
                testID="listitem-gap"
              />
              <View
                style={
                  {
                    "flex": 1,
                  }
                }
                testID="listitemcolumn"
              >
                <Text
                  accessibilityRole="text"
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  BNB Smart Chain
                </Text>
              </View>
            </View>
          </View>
        </TouchableOpacity>
      </View>
    </View>
  </RCTScrollView>,
  <View
    style={
      {
        "marginTop": 12,
        "paddingHorizontal": 16,
      }
    }
  >
    <TouchableOpacity
      accessibilityRole="button"
      accessible={true}
      activeOpacity={1}
      onPress={[Function]}
      onPressIn={[Function]}
      onPressOut={[Function]}
      style={
        {
          "alignItems": "center",
          "alignSelf": "stretch",
          "backgroundColor": "#121314",
          "borderRadius": 12,
          "flexDirection": "row",
          "height": 48,
          "justifyContent": "center",
          "overflow": "hidden",
          "paddingHorizontal": 16,
        }
      }
    >
      <Text
        accessibilityRole="text"
        style={
          {
            "color": "#ffffff",
            "fontFamily": "Geist-Medium",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
          }
        }
      >
        Apply
      </Text>
    </TouchableOpacity>
  </View>,
]
`;
